; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/video/pnx4008/extr_sdum.c_nof_bytes.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/video/pnx4008/extr_sdum.c_nof_bytes.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.dum_ch_setup = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.dum_ch_setup*)* @nof_bytes to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @nof_bytes(%struct.dum_ch_setup* %0) #0 {
  %2 = alloca %struct.dum_ch_setup*, align 8
  %3 = alloca i32, align 4
  store %struct.dum_ch_setup* %0, %struct.dum_ch_setup** %2, align 8
  %4 = load %struct.dum_ch_setup*, %struct.dum_ch_setup** %2, align 8
  %5 = call i32 @nof_pixels_dxy(%struct.dum_ch_setup* %4)
  store i32 %5, i32* %3, align 4
  %6 = load %struct.dum_ch_setup*, %struct.dum_ch_setup** %2, align 8
  %7 = getelementptr inbounds %struct.dum_ch_setup, %struct.dum_ch_setup* %6, i32 0, i32 0
  %8 = load i32, i32* %7, align 4
  switch i32 %8, label %12 [
    i32 128, label %9
    i32 129, label %9
  ]

9:                                                ; preds = %1, %1
  %10 = load i32, i32* %3, align 4
  %11 = mul nsw i32 %10, 4
  store i32 %11, i32* %3, align 4
  br label %15

12:                                               ; preds = %1
  %13 = load i32, i32* %3, align 4
  %14 = mul nsw i32 %13, 2
  store i32 %14, i32* %3, align 4
  br label %15

15:                                               ; preds = %12, %9
  %16 = load i32, i32* %3, align 4
  ret i32 %16
}

declare dso_local i32 @nof_pixels_dxy(%struct.dum_ch_setup*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
